force-app/main/default/objects/Account/fields/Letzer_Dublettencheck__c.field-meta.xml
<CustomField>
    <fullName>Letzer_Dublettencheck__c</fullName>
    <label>Last Duplicate Check</label>
    <type>Date</type>
</CustomField>