force-app/main/default/objects/Account/fields/Schufa_Check__c.field-meta.xml
<CustomField>
    <fullName>Schufa_Check__c</fullName>
    <label>Schufa Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positiv</fullName>
            </value>
            <value>
                <fullName>Negativ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>