force-app/main/default/objects/Account/fields/Schufa_Score__c.field-meta.xml
<CustomField>
    <fullName>Schufa_Score__c</fullName>
    <label>Schufa Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>